; ModuleID = '/home/carl/AnghaBench/tmux/extr_mode-tree.c_mode_tree_remove.c'
source_filename = "/home/carl/AnghaBench/tmux/extr_mode-tree.c_mode_tree_remove.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mode_tree_data = type { i32 }
%struct.mode_tree_item = type { i32, %struct.mode_tree_item* }

@entry = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @mode_tree_remove(%struct.mode_tree_data* %0, %struct.mode_tree_item* %1) #0 {
  %3 = alloca %struct.mode_tree_data*, align 8
  %4 = alloca %struct.mode_tree_item*, align 8
  %5 = alloca %struct.mode_tree_item*, align 8
  store %struct.mode_tree_data* %0, %struct.mode_tree_data** %3, align 8
  store %struct.mode_tree_item* %1, %struct.mode_tree_item** %4, align 8
  %6 = load %struct.mode_tree_item*, %struct.mode_tree_item** %4, align 8
  %7 = getelementptr inbounds %struct.mode_tree_item, %struct.mode_tree_item* %6, i32 0, i32 1
  %8 = load %struct.mode_tree_item*, %struct.mode_tree_item** %7, align 8
  store %struct.mode_tree_item* %8, %struct.mode_tree_item** %5, align 8
  %9 = load %struct.mode_tree_item*, %struct.mode_tree_item** %5, align 8
  %10 = icmp ne %struct.mode_tree_item* %9, null
  br i1 %10, label %11, label %17

11:                                               ; preds = %2
  %12 = load %struct.mode_tree_item*, %struct.mode_tree_item** %5, align 8
  %13 = getelementptr inbounds %struct.mode_tree_item, %struct.mode_tree_item* %12, i32 0, i32 0
  %14 = load %struct.mode_tree_item*, %struct.mode_tree_item** %4, align 8
  %15 = load i32, i32* @entry, align 4
  %16 = call i32 @TAILQ_REMOVE(i32* %13, %struct.mode_tree_item* %14, i32 %15)
  br label %23

17:                                               ; preds = %2
  %18 = load %struct.mode_tree_data*, %struct.mode_tree_data** %3, align 8
  %19 = getelementptr inbounds %struct.mode_tree_data, %struct.mode_tree_data* %18, i32 0, i32 0
  %20 = load %struct.mode_tree_item*, %struct.mode_tree_item** %4, align 8
  %21 = load i32, i32* @entry, align 4
  %22 = call i32 @TAILQ_REMOVE(i32* %19, %struct.mode_tree_item* %20, i32 %21)
  br label %23

23:                                               ; preds = %17, %11
  %24 = load %struct.mode_tree_item*, %struct.mode_tree_item** %4, align 8
  %25 = call i32 @mode_tree_free_item(%struct.mode_tree_item* %24)
  ret void
}

declare dso_local i32 @TAILQ_REMOVE(i32*, %struct.mode_tree_item*, i32) #1

declare dso_local i32 @mode_tree_free_item(%struct.mode_tree_item*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
